add bootstap jquery and all start up  view's  layout anad  import

--- a/bookstore/bookstore/Views/Home/Index.cshtml
+++ b/bookstore/bookstore/Views/Home/Index.cshtml
@@ -1,7 +1,6 @@
-﻿
-@{
-    ViewData["Title"] = "Index";
-}
-
-<h1>Index</h1>
+﻿<div class="container">
+    <div class="col-md-6 offset-md-4">
+        <h1>Hello World</h1>
+    </div>
+</div>
 
