--- a/bookstore/bookstore/Views/Account/Register.cshtml
+++ b/bookstore/bookstore/Views/Account/Register.cshtml
@@ -2,7 +2,8 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-6 offset-md-3">
+        <div class="col-md-6 offset-md-3 mt-4">
+            <h1>Registration</h1>
             <form asp-action="Register" asp-controller="Account">
                 <div asp-validation-summary="ModelOnly" class="text-warning"></div>
                 <div class="form-group">
